--- a/setup.cfg
+++ b/setup.cfg
@@ -48,16 +48,8 @@ keywords =
     # TODO add your own free-text keywords
 
 [options]
-install_requires =
-    # Missing itertools from the standard library you didn't know you needed
-    more_itertools
-    # Use progress bars excessively
-    tqdm
-    # Command line tools
-    click
-    more_click
-    # TODO your requirements go here
-
+# This package is a pure python library!! Unless you want click
+#install_requires =
 
 # Random options
 zip_safe = false
@@ -73,6 +65,8 @@ package_dir =
 where = src
 
 [options.extras_require]
+click =
+    click
 docs =
     sphinx
     sphinx-rtd-theme
