--- a/setup.cfg
+++ b/setup.cfg
@@ -48,8 +48,8 @@ keywords =
     # TODO add your own free-text keywords
 
 [options]
-# This package is a pure python library!! Unless you want click
-#install_requires =
+install_requires =
+    dataclasses; python_version < 3.7
 
 # Random options
 zip_safe = false
