Add search space for ray.tune

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,11 +41,11 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3 :: Only
-    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
+# TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
 keywords =
     cthoyt
     cookiecutter
-    # TODO add your own free-text keywords
+# TODO add your own free-text keywords
 
 [options]
 # Random options
@@ -69,6 +69,8 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+ray =
+    ray[tune]
 
 ######################
 # Doc8 Configuration #
