--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,8 @@ commands = coverage run -p -m pytest --durations=20 {posargs:tests}
 deps =
     coverage
     pytest
+extras =
+    ray
 
 [testenv:coverage-clean]
 deps = coverage
