Use the tricks inside setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,7 @@ docs =
     sphinx-click
     sphinx-autodoc-typehints
 ray =
-    ray[tune]
+    ray[tune]; python_version < "3.9"
 
 ######################
 # Doc8 Configuration #
