Add search space for ray.tune (#6)
Co-authored-by: Charles Tapley Hoyt <cthoyt@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+ray =
+    ray[tune]; python_version < "3.9"
 
 ######################
 # Doc8 Configuration #
