--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ description = Run the pyroma tool to check the package friendliness of the proje
 [testenv:mypy]
 deps = mypy
 skip_install = true
-commands = mypy --ignore-missing-imports src/class_resolver/
+commands = mypy --install-types --non-interactive --ignore-missing-imports src/class_resolver/
 description = Run the mypy tool to check static typing on the project.
 
 [testenv:doc8]
