:black_circle: Blacken

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     # always keep coverage-clean first
     # coverage-clean
     # code linters/stylers
+    lint
     manifest
     pyroma
     flake8
@@ -48,9 +49,9 @@ deps =
     flake8-colors
     flake8-docstrings
     flake8-import-order
-    flake8-commas
     flake8-bugbear
     flake8-broken-line
+    flake8-black
     pep8-naming
     pydocstyle
     darglint
@@ -65,6 +66,13 @@ deps =
 skip_install = true
 commands = pyroma --min=10 .
 description = Run the pyroma tool to check the package friendliness of the project.
+
+[testenv:lint]
+deps =
+    black
+skip_install = true
+commands = black src/ tests/ setup.py
+description = Run black.
 
 [testenv:mypy]
 deps = mypy
