--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -28,5 +28,5 @@ search = release = '{current_version}'
 replace = release = '{new_version}'
 
 [bumpversion:file:src/class_resolver/version.py]
-search = VERSION = '{current_version}'
-replace = VERSION = '{new_version}'
+search = VERSION = "{current_version}"
+replace = VERSION = "{new_version}"
