--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
     # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
 keywords =
