--- a/tox.ini
+++ b/tox.ini
@@ -44,11 +44,11 @@ commands = check-manifest
 [testenv:flake8]
 skip_install = true
 deps =
-    flake8<4.0.0
+    flake8
     flake8-bandit
     flake8-colors
     flake8-docstrings
-    flake8-import-order
+    flake8-isort
     flake8-bugbear
     flake8-broken-line
     flake8-black
@@ -70,9 +70,12 @@ description = Run the pyroma tool to check the package friendliness of the proje
 [testenv:lint]
 deps =
     black
+    isort
 skip_install = true
-commands = black src/ tests/ setup.py
-description = Run black.
+commands =
+    black src/ tests/ setup.py
+    isort src/ tests/ setup.py
+description = Run linters.
 
 [testenv:mypy]
 deps = mypy
