--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,9 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+tests =
+    coverage
+    pytest
 ray =
     ray[tune]; python_version < "3.9"
 
