--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,12 @@ envlist =
     # coverage-report
 
 [testenv]
-commands = coverage run -p -m pytest --durations=20 {posargs:tests}
-deps =
-    coverage
-    pytest
+commands =
+    coverage run -p -m pytest --durations=20 {posargs:tests}
+    coverage combine
+    coverage xml
 extras =
+    tests
     click
     ray
 
@@ -138,9 +139,9 @@ deps =
 skip_install = true
 deps =
     wheel
-    setuptools
+    build
 commands =
-    python setup.py -q sdist bdist_wheel
+    python -m build --sdist --wheel --no-isolation
 
 [testenv:release]
 skip_install = true
