--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = class_resolver
-version = 0.2.1-dev
+version = 0.2.1
 description = Lookup and instantiate classes with style.
 long_description = file: README.md
 long_description_content_type = text/markdown
