--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ license_file = LICENSE
 
 # Search tags
 classifiers =
-    Development Status :: 1 - Planning
+    Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
@@ -42,11 +42,9 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
-    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
 keywords =
-    cthoyt
-    cookiecutter
-    # TODO add your own free-text keywords
+    development tool
+    configurability
 
 [options]
 # Random options
@@ -68,7 +66,6 @@ click =
 docs =
     sphinx
     sphinx-rtd-theme
-    sphinx-click
     sphinx-autodoc-typehints
 tests =
     coverage
@@ -114,3 +111,34 @@ exclude_lines =
 [darglint]
 docstring_style = sphinx
 strictness = short
+
+#########################
+# Flake8 Configuration  #
+# (.flake8)             #
+#########################
+[flake8]
+ignore =
+    S301 # pickle
+    S403 # pickle
+    S404
+    S603
+    W503 # Line break before binary operator (flake8 is wrong)
+exclude =
+    .tox,
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    build,
+    dist,
+    tests/fixtures/*,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs,
+    data
+max-line-length = 120
+max-complexity = 20
+import-order-style = pycharm
+application-import-names =
+    class_resolver
+    tests
