--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,9 +6,10 @@ build:
   image: latest
 
 python:
-  version: 3.8
+  version: "3.8"
   install:
     - method: pip
       path: .
       extra_requirements:
         - docs
+        - click
