--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
+isolated_build = true
 envlist =
     # always keep coverage-clean first
     # coverage-clean
@@ -16,7 +17,7 @@ envlist =
     # documentation linters/checkers
     doc8
     docstr-coverage
-    docs
+    docs-test
     # the actual tests
     py
     # always keep coverage-report last
@@ -57,7 +58,7 @@ deps =
     pydocstyle
     darglint
 commands =
-    flake8 src/class_resolver/ tests/ setup.py
+    flake8 src/class_resolver/ tests/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:pyroma]
@@ -74,8 +75,8 @@ deps =
     isort
 skip_install = true
 commands =
-    black src/ tests/ setup.py
-    isort src/ tests/ setup.py
+    black src/ tests/
+    isort src/ tests/
 description = Run linters.
 
 [testenv:mypy]
@@ -98,18 +99,28 @@ skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage src/class_resolver/ tests/ setup.py --skip-private --skip-magic
+    docstr-coverage src/class_resolver/ tests/ --skip-private --skip-magic
 description = Run the docstr-coverage tool to check documentation coverage
 
 [testenv:docs]
+description = Build the documentation locally.
+extras =
+    docs
+    click
+commands =
+    python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
+
+[testenv:docs-test]
+description = Test the documentation build in an isolated environment
 changedir = docs
 extras =
     docs
+    click
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
-    sphinx-build -W -b html -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
-    sphinx-build -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
+    python -m sphinx -W -b html     -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
+    python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
 whitelist_externals =
@@ -144,6 +155,7 @@ commands =
     python -m build --sdist --wheel --no-isolation
 
 [testenv:release]
+description = Release the code to PyPI so users can pip install it
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -152,18 +164,30 @@ commands =
     {[testenv:build]commands}
     twine upload --skip-existing dist/*
 
-[testenv:finish]
+[testenv:release-test]
+description = Release the code to the test PyPI site
 skip_install = true
-passenv = HOME
 deps =
     {[testenv:build]deps}
-    {[testenv:release]deps}
-    bumpversion
+    twine >= 1.5.0
 commands =
-    bumpversion release
+    {[testenv:build]commands}
+    twine upload --skip-existing --repository-url https://test.pypi.org/simple/ dist/*
+
+[testenv:finish]
+skip_install = true
+passenv =
+    HOME
+    TWINE_USERNAME
+    TWINE_PASSWORD
+deps =
+    {[testenv:release]deps}
+    bump2version
+commands =
+    bump2version release --tag
     {[testenv:release]commands}
-    git push
-    bumpversion patch
+    git push --tags
+    bump2version patch
     git push
 whitelist_externals =
     /usr/bin/git
