Cleanup, docs, and unit tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,13 @@ tests =
 ray =
     ray[tune]; python_version < "3.9"
 
+[options.entry_points]
+class_resolver_demo =
+    add = operator:add
+    sub = operator:sub
+    mul = operator:mul
+    expected_failure = operator:nope_this_is_not_real
+
 ######################
 # Doc8 Configuration #
 # (doc8.ini)         #
@@ -104,6 +111,7 @@ exclude_lines =
     if __name__ == .__main__.:
     def __str__
     def __repr__
+    if TYPE_CHECKING:
 
 ##########################
 # Darglint Configuration #
