--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ tests =
 ray =
     ray[tune]; python_version < "3.9"
 torch =
-    torch
+    torch; python_version < "3.10"
 
 [options.entry_points]
 class_resolver_demo =
