--- a/tox.ini
+++ b/tox.ini
@@ -108,6 +108,7 @@ description = Build the documentation locally.
 extras =
     docs
     click
+    torch
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
 
