--- a/tox.ini
+++ b/tox.ini
@@ -116,8 +116,7 @@ commands =
 description = Test the documentation build in an isolated environment
 changedir = docs
 extras =
-    docs
-    click
+    {[testenv:docs]deps}
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
