--- a/tox.ini
+++ b/tox.ini
@@ -116,7 +116,7 @@ commands =
 description = Test the documentation build in an isolated environment
 changedir = docs
 extras =
-    {[testenv:docs]deps}
+    {[testenv:docs]extras}
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
