Add torch contrib module (#22)
* Add torch contrib module

* Fix optimizer resolution

* Add initializer resolver

* Add contrib tests

* Update

* Update torch.py

* Update torch.py

* Smarter import of activations

* Cleanup

* Add docs

* Update tox.ini

* Update tox.ini

* Update tests.yml

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ extras =
     tests
     click
     ray
+    torch
 
 [testenv:coverage-clean]
 deps = coverage
@@ -107,6 +108,7 @@ description = Build the documentation locally.
 extras =
     docs
     click
+    torch
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
 
@@ -114,8 +116,7 @@ commands =
 description = Test the documentation build in an isolated environment
 changedir = docs
 extras =
-    docs
-    click
+    {[testenv:docs]extras}
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
