--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,8 @@ tests =
     pytest
 ray =
     ray[tune]; python_version < "3.9"
+torch =
+    torch; python_version < "3.10"
 
 [options.entry_points]
 class_resolver_demo =
