--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,4 +10,4 @@ recursive-include docs/source *.png
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
 include README.md LICENSE docs/Makefile
-exclude tox.ini .flake8 .bumpversion.cfg .readthedocs.yml CONTRIBUTING.rst
+exclude tox.ini .flake8 .bumpversion.cfg .readthedocs.yml CONTRIBUTING.md
