--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,8 @@ ray =
     ray[tune]; python_version < "3.9"
 torch =
     torch; python_version < "3.10"
+optuna =
+    optuna
 
 [options.entry_points]
 class_resolver_demo =
