--- a/tox.ini
+++ b/tox.ini
@@ -128,6 +128,9 @@ whitelist_externals =
     /bin/cp
     /bin/cat
     /bin/mkdir
+    /usr/bin/cp
+    /usr/bin/cat
+    /usr/bin/mkdir
 
 [testenv:coverage-report]
 deps = coverage
