Update optuna documentation
It was missing from the documentation build and intersphinx before

--- a/tox.ini
+++ b/tox.ini
@@ -110,6 +110,7 @@ description = Build the documentation locally.
 extras =
     docs
     click
+    optuna
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
 
