--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ docdata =
 ray =
     ray[tune]; python_version < "3.9"
 torch =
-    torch; python_version < "3.10"
+    torch
 optuna =
     optuna
 
