Add numpy contrib

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ extras =
     click
     ray
     torch
+    numpy
     optuna
     docdata
 
@@ -111,6 +112,7 @@ extras =
     docs
     click
     torch
+    numpy
     optuna
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
