--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ commands =
     python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
-whitelist_externals =
+allowlist_externals =
     /bin/cp
     /bin/cat
     /bin/mkdir
@@ -198,5 +198,5 @@ commands =
     git push --tags
     bump2version patch
     git push
-whitelist_externals =
+allowlist_externals =
     /usr/bin/git
