--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ tests =
 docdata =
     docdata
 ray =
-    ray[tune]; python_version < "3.9"
+    ray[tune]<2.0.0; python_version < "3.9"
 torch =
     torch
 optuna =
