Add sklearn contrib

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ extras =
     numpy
     optuna
     docdata
+    sklearn
 
 [testenv:coverage-clean]
 deps = coverage
@@ -114,6 +115,7 @@ extras =
     torch
     numpy
     optuna
+    sklearn
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
 
