Add more testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,8 @@ ray =
     ray[tune]<2.0.0; python_version < "3.9"
 torch =
     torch
+torch-geometric =
+    torch-geometric
 optuna =
     optuna
 numpy =
