Add `torch_geometric` contrib module (#43)

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,10 @@ ray =
     ray[tune]<2.0.0; python_version < "3.9"
 torch =
     torch
+torch-geometric =
+    torch
+    torch-sparse
+    torch-geometric
 optuna =
     optuna
 numpy =
