Add doctests to CI
References #49

--- a/tox.ini
+++ b/tox.ini
@@ -107,6 +107,13 @@ commands =
     docstr-coverage src/class_resolver/ tests/ --skip-private --skip-magic
 description = Run the docstr-coverage tool to check documentation coverage
 
+[testenv:doctests]
+commands =
+    xdoctest -m src/class_resolver/ --quiet
+deps =
+    xdoctest
+    pygments
+
 [testenv:docs]
 description = Build the documentation locally.
 extras =
