--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,6 +67,9 @@ jobs:
       - name: Test with pytest
         run:
           tox -e py
+      - name: Doctests
+        run:
+          tox -e doctests
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v1
         if: success()
