--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ envlist =
     docstr-coverage
     docs-test
     # the actual tests
+    doctests
     py
     # always keep coverage-report last
     # coverage-report
