--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ envlist =
     docstr-coverage
     docs-test
     # the actual tests
+    doctests
     py
     # always keep coverage-report last
     # coverage-report
@@ -106,6 +107,13 @@ deps =
 commands =
     docstr-coverage src/class_resolver/ tests/ --skip-private --skip-magic
 description = Run the docstr-coverage tool to check documentation coverage
+
+[testenv:doctests]
+commands =
+    xdoctest -m src/class_resolver/ --quiet
+deps =
+    xdoctest
+    pygments
 
 [testenv:docs]
 description = Build the documentation locally.
