--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,9 @@ keywords =
     configurability
 
 [options]
+install_requires =
+    importlib_metadata; python_version < "3.9"
+
 # Random options
 zip_safe = false
 include_package_data = True
