Use importlib.metadata instead of pkg_resources for entry point discovery

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ keywords =
 zip_safe = false
 include_package_data = True
 python_requires = >=3.7
+install_requires =
+    importlib-metadata > 3.6; python_version<"3.10"
 
 # Where is my code
 packages = find:
