--- a/setup.cfg
+++ b/setup.cfg
@@ -144,11 +144,14 @@ strictness = short
 #########################
 [flake8]
 ignore =
-    S301 # pickle
-    S403 # pickle
+    # pickle
+    S301
+    # pickle
+    S403
     S404
     S603
-    W503 # Line break before binary operator (flake8 is wrong)
+    # Line break before binary operator (flake8 is wrong)
+    W503
 exclude =
     .tox,
     .git,
