--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -24,8 +24,8 @@ search = version = {current_version}
 replace = version = {new_version}
 
 [bumpversion:file:docs/source/conf.py]
-search = release = '{current_version}'
-replace = release = '{new_version}'
+search = release = "{current_version}"
+replace = release = "{new_version}"
 
 [bumpversion:file:src/class_resolver/version.py]
 search = VERSION = "{current_version}"
