--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,7 @@ description = Run linters.
 [testenv:mypy]
 deps = mypy
 skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports src/class_resolver/
+commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/class_resolver/
 description = Run the mypy tool to check static typing on the project.
 
 [testenv:doc8]
