--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ where = src
 click =
     click
 docs =
-    sphinx
+    sphinx<8.0
     sphinx-rtd-theme
     sphinx-autodoc-typehints
     sphinx_automodapi
