--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,205 @@
 # See https://setuptools.readthedocs.io/en/latest/build_meta.html
 [build-system]
 requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+build-backend = "setuptools.build_meta"
 
-[tool.black]
-line-length = 100
-target-version = ["py39", "py310", "py311", "py312"]
+[project]
+name = "class_resolver"
+version = "0.4.4-dev"
+description = "Lookup and instantiate classes with style."
+readme = "README.md"
+authors = [
+    { name = "Charles Tapley Hoyt", email = "cthoyt@gmail.com" }
+]
+maintainers = [
+    { name = "Charles Tapley Hoyt", email = "cthoyt@gmail.com" }
+]
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-include_trailing_comma = true
-reverse_relative = true
+# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
+# Search tags using the controlled vocabulary at https://pypi.org/classifiers
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Framework :: Pytest",
+    "Framework :: tox",
+    "Framework :: Sphinx",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3 :: Only",
+]
+keywords = [
+    "snekpack",
+    "cookiecutter",
+    "development tool",
+    "configurability"
+]
+
+# License Information. This can be any valid SPDX identifiers that can be resolved
+# with URLs like https://spdx.org/licenses/MIT
+# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
+license = { file = "LICENSE" }
+
+requires-python = ">=3.9"
+dependencies = [
+    "importlib-metadata > 3.6; python_version<'3.10'",
+]
+
+[project.optional-dependencies]
+tests = [
+    "pytest",
+    "docdata",
+    "coverage",
+]
+click = [
+    "click"
+]
+docs = [
+    # waiting on https://github.com/readthedocs/sphinx_rtd_theme/issues/1582
+    # to make sphinx 8 possible
+    "sphinx<8",
+    "sphinx-rtd-theme",
+    "sphinx_automodapi",
+]
+ray = [
+    "ray[tune]<2.0.0; python_version < '3.9'",
+]
+torch = [
+    "torch"
+]
+torch-geometric =[
+    "torch",
+    "torch-sparse",
+    "torch-geometric",
+]
+optuna = [
+    "optuna",
+]
+numpy = [
+    "numpy",
+]
+sklearn = [
+    "scikit-learn"
+]
+
+# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
+[project.urls]
+"Bug Tracker" = "https://github.com/cthoyt/class-resolver/issues"
+Homepage = "https://github.com/cthoyt/class-resolver"
+Repository = "https://github.com/cthoyt/class-resolver.git"
+Documentation = "https://class_resolver.readthedocs.io"
+
+[project.entry-points.class_resolver_demo]
+add = "operator:add"
+sub = "operator:sub"
+mul = "operator:mul"
+expected_failure = "operator:nope_this_is_not_real"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+# this implicitly sets `packages = ":find"`
+where = ["src"]  # list of folders that contain the packages (["."] by default)
+
+# See https://setuptools.pypa.io/en/latest/userguide/datafiles.html
+[tool.setuptools.package-data]
+"*" = ["*.*"]
+
+[tool.cruft]
+skip = [
+    "**/__init__.py",
+    "tests/*"
+]
+
+# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
+[tool.doc8]
+max-line-length = 120
+
+# Pytest, see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
+]
+
+# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
+[tool.coverage.run]
+branch = true
+source = [
+    "class_resolver",
+]
+omit = [
+    "tests/*",
+    "docs/*",
+]
+
+[tool.coverage.paths]
+source = [
+    "src/class_resolver",
+    ".tox/*/lib/python*/site-packages/class_resolver",
+]
+
+[tool.coverage.report]
+show_missing = true
+exclude_lines = [
+    "pragma: no cover",
+    "raise NotImplementedError",
+    "if __name__ == \"__main__\":",
+    "if TYPE_CHECKING:",
+    "def __str__",
+    "def __repr__",
+]
+
+[tool.ruff]
+line-length = 120
+extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
+# See https://docs.astral.sh/ruff/rules
+extend-select = [
+    "F", # pyflakes
+    "E", # pycodestyle errors
+    "W", # pycodestyle warnings
+    "C90", # mccabe
+    "I", # isort
+    "UP", # pyupgrade
+    "D", # pydocstyle
+    "B", # bugbear
+    "S", # bandit
+    "T20", # print
+    "N", # pep8 naming
+    "ERA", # eradicate commented out code
+    "NPY", # numpy checks
+    "RUF", # ruff rules
+]
+ignore = [
+    "D105", # Missing docstring in magic method
+    "E203", # Black conflicts with the following
+]
+
+# See https://docs.astral.sh/ruff/settings/#per-file-ignores
+[tool.ruff.lint.per-file-ignores]
+# Ignore security issues in the version.py, which are inconsistent
+"src/class_resolver/version.py" = ["S603", "S607"]
+# Ignore commented out code in Sphinx configuration file
+"docs/source/conf.py" = ["ERA001"]
+# Prints are okay in notebooks
+"notebooks/**/*.ipynb" = ["T201"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "pep257"
+
+[tool.ruff.lint.isort]
+relative-imports-order = "closest-to-furthest"
+known-third-party = [
+    "tqdm",
+]
+known-first-party = [
+    "class_resolver",
+    "tests",
+]
