--- a/tox.ini
+++ b/tox.ini
@@ -4,27 +4,36 @@
 # and then run "tox" from this directory.
 
 [tox]
-isolated_build = true
+# To use a PEP 517 build-backend you are required to configure tox to use an isolated_build:
+# https://tox.readthedocs.io/en/latest/example/package.html
+isolated_build = True
+
+# These environments are run in order if you just use `tox`:
 envlist =
     # always keep coverage-clean first
-    # coverage-clean
-    # code linters/stylers
-    lint
+    coverage-clean
+    # code formatters
+    format
+    # format-docs
+    # Code quality assessment
     manifest
     pyroma
-    flake8
+    lint
     mypy
-    # documentation linters/checkers
+    # Documentation quality assurance
     doc8
     docstr-coverage
     docs-test
     # the actual tests
-    doctests
     py
+    doctests
     # always keep coverage-report last
     # coverage-report
 
 [testenv]
+description = Run unit and integration tests.
+# Runs on the "tests" directory by default, or passes the positional
+# arguments from `tox -e py <posargs_1> ... <posargs_n>
 commands =
     coverage run -p -m pytest --durations=20 {posargs:tests}
     coverage combine
@@ -40,32 +49,65 @@ extras =
     sklearn
 
 [testenv:coverage-clean]
+description = Remove testing coverage artifacts.
 deps = coverage
 skip_install = true
 commands = coverage erase
+
+[testenv:doctests]
+description = Test that documentation examples run properly.
+commands =
+    xdoctest -m src
+deps =
+    xdoctest
+    pygments
+
+[testenv:treon]
+description = Test that notebooks can run to completion
+commands =
+    treon notebooks/
+deps =
+    treon
+
+[testenv:format]
+description = Format the code in a deterministic way using ruff.
+deps =
+    ruff
+skip_install = true
+commands =
+    ruff check --fix
+    ruff format
+
+[testenv:format-docs]
+description = Run documentation linters.
+# note that this doesn't work with sphinx-click
+# or any other extension that adds extra directives
+deps =
+    rstfmt
+extras =
+    # See the [project.optional-dependencies] entry in pyproject.toml for "docs"
+    docs
+skip_install = true
+commands =
+    rstfmt docs/source/
 
 [testenv:manifest]
 deps = check-manifest
 skip_install = true
 commands = check-manifest
+description = Check that the MANIFEST.in is written properly and give feedback on how to fix it.
 
-[testenv:flake8]
+[testenv:lint]
+description = Check code quality using ruff and other tools.
+
 skip_install = true
 deps =
-    flake8
-    flake8-bandit
-    flake8-colors
-    flake8-docstrings
-    flake8-isort
-    flake8-bugbear
-    flake8-broken-line
-    flake8-black
-    pep8-naming
-    pydocstyle
-    darglint
+    ruff
+    # https://github.com/akaihola/darglint2 for more information
+    darglint2
 commands =
-    flake8 src/class_resolver/ tests/
-description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
+    ruff check
+    darglint2 --strictness short --docstring-style sphinx -v 2 src/ tests/ notebooks/
 
 [testenv:pyroma]
 deps =
@@ -75,48 +117,33 @@ skip_install = true
 commands = pyroma --min=10 .
 description = Run the pyroma tool to check the package friendliness of the project.
 
-[testenv:lint]
-deps =
-    black
-    isort
-skip_install = true
-commands =
-    black src/ tests/
-    isort src/ tests/
-description = Run linters.
-
 [testenv:mypy]
-deps = mypy
-skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/class_resolver/
 description = Run the mypy tool to check static typing on the project.
+deps =
+    mypy
+skip_install = true
+commands = mypy --install-types --non-interactive --ignore-missing-imports src/
 
 [testenv:doc8]
 skip_install = true
 deps =
-    sphinx
     doc8
+extras =
+    docs
 commands =
     doc8 docs/source/
 description = Run the doc8 tool to check the style of the RST files in the project docs.
 
 [testenv:docstr-coverage]
+description = Run the docstr-coverage tool to check documentation coverage.
 skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage src/class_resolver/ tests/ --skip-private --skip-magic
-description = Run the docstr-coverage tool to check documentation coverage
-
-[testenv:doctests]
-commands =
-    xdoctest -m src/class_resolver/ --quiet
-deps =
-    xdoctest
-    pygments
+    docstr-coverage src/ tests/ --skip-private --skip-magic
 
 [testenv:docs]
-description = Build the documentation locally.
+description = Build the documentation locally, allowing warnings.
 extras =
     docs
     click
@@ -125,26 +152,27 @@ extras =
     optuna
     sklearn
 commands =
-    python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
+    python -m sphinx -b html -d docs/build/doctrees docs/source docs/build/html
 
 [testenv:docs-test]
-description = Test the documentation build in an isolated environment
+description = Test building the documentation in an isolated environment. Warnings are considered as errors via -W.
 changedir = docs
 extras =
     {[testenv:docs]extras}
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
-    python -m sphinx -W -b html -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
+    python -m sphinx -W -b html     -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
+    # python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
+    # cat {envtmpdir}/build/coverage/c.txt
+    # cat {envtmpdir}/build/coverage/python.txt
 allowlist_externals =
-    /bin/cp
-    /bin/cat
-    /bin/mkdir
-    /usr/bin/cp
-    /usr/bin/cat
-    /usr/bin/mkdir
+    cp
+    cat
+    mkdir
 
 [testenv:coverage-report]
+# TODO this is broken
 deps = coverage
 skip_install = true
 commands =
@@ -156,19 +184,48 @@ commands =
 ####################
 
 [testenv:bumpversion]
-commands = bumpversion {posargs}
+commands = bump2version {posargs}
 skip_install = true
 passenv = HOME
 deps =
-    bumpversion
+    bump2version
 
 [testenv:build]
 skip_install = true
 deps =
     wheel
-    build
+    build[uv]
+    setuptools
 commands =
     python -m build --sdist --wheel --no-isolation
+
+#################
+# Test Releases #
+#################
+
+# In order to test releases, you'll need to take the following steps:
+#
+# 1. Navigate to https://pypi.org/account/register/ to register for Test PyPI
+# 2. Navigate to https://pypi.org/manage/account/ and request to re-send a verification email.
+#    This is not sent by default, and is required to set up 2-Factor Authentication.
+# 3. Get account recovery codes
+# 4. Set up 2-Factor Authentication
+# 5. Get an API token from https://pypi.org/manage/account/token/
+# 6. Create a file called .pypirc in the home directory if it does not already exist.
+# 7. Add the following content to the .pypirc file
+#
+#    [distutils]
+#    index-servers=
+#      pypi
+#      testpypi
+#
+#    [pypi]
+#    username = __token__
+#    password = <the API token you just got>
+#
+#    If there's already an `index-servers =` list, just make sure you add `pypi` to it.
+#    More information about .pypirc can be found at https://packaging.python.org/en/latest/specifications/pypirc/
+
 
 [testenv:release]
 description = Release the code to PyPI so users can pip install it
@@ -180,17 +237,10 @@ commands =
     {[testenv:build]commands}
     twine upload --skip-existing dist/*
 
-[testenv:release-test]
-description = Release the code to the test PyPI site
-skip_install = true
-deps =
-    {[testenv:build]deps}
-    twine >= 1.5.0
-commands =
-    {[testenv:build]commands}
-    twine upload --skip-existing --repository-url https://test.pypi.org/simple/ dist/*
-
 [testenv:finish]
+description =
+    Run a workflow that removes -dev from the version, creates a tagged release on GitHub,
+    creates a release on PyPI, and bumps the version again.
 skip_install = true
 passenv =
     HOME
@@ -206,4 +256,63 @@ commands =
     bump2version patch
     git push
 allowlist_externals =
-    /usr/bin/git
+    git
+
+#################
+# Test Releases #
+#################
+
+# In order to test releases, you'll need to take the following steps:
+#
+# 1. Navigate to https://test.pypi.org/account/register/ to register for Test PyPI
+# 2. Navigate to https://test.pypi.org/manage/account/ and request to re-send a verification email.
+#    This is not sent by default, and is required to set up 2-Factor Authentication.
+# 3. Get account recovery codes
+# 4. Set up 2-Factor Authentication
+# 5. Get an API token from https://test.pypi.org/manage/account/token/
+# 6. Create a file called .pypirc in the home directory if it does not already exist.
+# 7. Add the following content to the .pypirc file
+#
+#    [distutils]
+#    index-servers=
+#      pypi
+#      testpypi
+#
+#    [testpypi]
+#    repository = https://test.pypi.org/legacy/
+#    username = __token__
+#    password = <the API token you just got>
+#
+#    If there's already an `index-servers =` list, just make sure you add `testpypi` to it.
+#    More information about .pypirc can be found at https://packaging.python.org/en/latest/specifications/pypirc/
+
+[testenv:testrelease]
+description = Release the code to the test PyPI site
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing --repository testpypi dist/*
+
+[testenv:testfinish]
+description =
+    Run a workflow that removes -dev from the version, creates a tagged release on GitHub,
+    creates a release on Test PyPI, and bumps the version again.
+skip_install = true
+passenv =
+    HOME
+    TWINE_USERNAME
+    TWINE_PASSWORD
+deps =
+    {[testenv:testrelease]deps}
+    bump2version
+commands =
+    bump2version release --tag
+    {[testenv:testrelease]commands}
+    git push --tags
+    bump2version patch
+    git push
+allowlist_externals =
+    git
