--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,14 +1,23 @@
+# This file configures the continuous integration (CI) system on GitHub.
+# Introductory materials can be found here: https://docs.github.com/en/actions/learn-github-actions/understanding-github-actions.
+# Documentation for editing this file can be found here: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+
 name: Tests
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   lint:
-    name: Lint
+    name: Code Quality
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ "3.12", "3.9" ]
+        tox-command: ["manifest", "lint", "pyroma", "mypy"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -16,15 +25,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: pip install tox
-      - name: Check manifest
-        run: tox -e manifest
-      - name: Check code quality with flake8
-        run: tox -e flake8
-      - name: Check package metadata with Pyroma
-        run: tox -e pyroma
-      - name: Check static typing with MyPy
-        run: tox -e mypy
+        run: |
+          pip install tox tox-uv
+      - name: Run command
+        run: tox -e ${{ matrix.tox-command }}
   docs:
     name: Documentation
     runs-on: ubuntu-latest
@@ -38,24 +42,22 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: pip install tox
+        run: |
+          pip install tox tox-uv
+          sudo apt-get install graphviz
       - name: Check RST conformity with doc8
-        run: tox -e doc8
-      - name: Check README.rst
         run: tox -e doc8
       - name: Check docstring coverage
         run: tox -e docstr-coverage
       - name: Check documentation build with Sphinx
-        run: |
-          sudo apt-get install graphviz
-          tox -e docs-test
+        run: tox -e docs-test
   tests:
     name: Tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        python-version: [ "3.12", "3.11", "3.10", "3.9" ]
+        python-version: [ "3.12", "3.9" ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -63,8 +65,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: pip install tox
-      - name: Test with pytest
+        run: pip install tox tox-uv
+      - name: Test with pytest and generate coverage file
         run:
           tox -e py
       - name: Doctests
