--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ license = { file = "LICENSE" }
 
 requires-python = ">=3.9"
 dependencies = [
-    "importlib-metadata > 3.6; python_version<'3.10'",
+    "importlib-metadata; python_version<'3.10'",
 ]
 
 [project.optional-dependencies]
