--- a/tox.ini
+++ b/tox.ini
@@ -114,6 +114,7 @@ description = Run the pyroma tool to check the package friendliness of the proje
 description = Run the mypy tool to check static typing on the project.
 deps =
     mypy
+    types-tabulate
 skip_install = true
 commands = mypy --install-types --non-interactive --ignore-missing-imports src/
 
