--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,10 +84,10 @@ numpy = [
     "numpy",
 ]
 sklearn = [
-    "scikit-learn"
+    "scikit-learn",
 ]
 tabulate = [
-    "tabulate"
+    "tabulate",
 ]
 
 # See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
