--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ extras =
     optuna
     docdata
     sklearn
+    tabulate
 
 [testenv:coverage-clean]
 description = Remove testing coverage artifacts.
