Add method to generate overview table (#66)
This PR adds rudimentary support for generating a table in RST format
(e.g. for inclusion in Sphinx documentation).

```python-console
>>> from class_resolver.contrib.torch import activation_resolver
>>> print(activation_resolver.make_table())
===============================  =================================================================
key                              class
===============================  =================================================================
nondynamicallyquantizablelinear  :class:`~torch.nn.modules.linear.NonDynamicallyQuantizableLinear`
module                           :class:`~torch.nn.modules.module.Module`
threshold                        :class:`~torch.nn.modules.activation.Threshold`
relu                             :class:`~torch.nn.modules.activation.ReLU`
rrelu                            :class:`~torch.nn.modules.activation.RReLU`
hardtanh                         :class:`~torch.nn.modules.activation.Hardtanh`
relu6                            :class:`~torch.nn.modules.activation.ReLU6`
sigmoid                          :class:`~torch.nn.modules.activation.Sigmoid`
hardsigmoid                      :class:`~torch.nn.modules.activation.Hardsigmoid`
tanh                             :class:`~torch.nn.modules.activation.Tanh`
silu                             :class:`~torch.nn.modules.activation.SiLU`
mish                             :class:`~torch.nn.modules.activation.Mish`
hardswish                        :class:`~torch.nn.modules.activation.Hardswish`
elu                              :class:`~torch.nn.modules.activation.ELU`
celu                             :class:`~torch.nn.modules.activation.CELU`
selu                             :class:`~torch.nn.modules.activation.SELU`
glu                              :class:`~torch.nn.modules.activation.GLU`
gelu                             :class:`~torch.nn.modules.activation.GELU`
hardshrink                       :c

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ extras =
     optuna
     docdata
     sklearn
+    tabulate
 
 [testenv:coverage-clean]
 description = Remove testing coverage artifacts.
@@ -114,6 +115,7 @@ description = Run the pyroma tool to check the package friendliness of the proje
 description = Run the mypy tool to check static typing on the project.
 deps =
     mypy
+    types-tabulate
 skip_install = true
 commands = mypy --install-types --non-interactive --ignore-missing-imports src/
 
