--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "class_resolver"
-version = "0.5.4-dev"
+version = "0.5.4"
 description = "Lookup and instantiate classes with style."
 readme = "README.md"
 authors = [
