--- a/tox.ini
+++ b/tox.ini
@@ -117,7 +117,7 @@ deps =
     mypy
     types-tabulate
 skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports src/
+commands = mypy --ignore-missing-imports src/ tests/
 
 [testenv:doc8]
 skip_install = true
