--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.9"
 dependencies = [
     "importlib-metadata > 3.6; python_version<'3.10'",
+    "typing-extensions",
 ]
 
 [project.optional-dependencies]
