Add strict type checking (#75)

--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ description = Run the pyroma tool to check the package friendliness of the proje
 description = Run the mypy tool to check static typing on the project. Installs the package to make sure all type stubs get recognized.
 dependency_groups =
     typing
-commands = mypy --ignore-missing-imports src/ tests/
+commands = mypy --ignore-missing-imports --strict src/ tests/
 
 [testenv:docs-lint]
 skip_install = true
