--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ release = [
 # see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
 [project.optional-dependencies]
 click = [
-    "click"
+    "click<8.2"
 ]
 torch = [
     "torch"
