chore: accept new Cruft update

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ envlist =
     lint-markdown
     mypy
     # Documentation quality assurance
-    doc8
+    docs-lint
     docstr-coverage
     docs-test
     # the actual tests
@@ -211,7 +211,7 @@ skip_install = true
 dependency_groups =
     build
 commands =
-    uv build --sdist --wheel --no-build-isolation
+    uv build --sdist --wheel --no-build-isolation --clear
 
 ############
 # Releases #
