--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ typing = [
     { include-group = "tests" },
     "mypy",
     "pydantic",
+    "click-types",
     "types-tabulate",
 ]
 docs-lint = [
